prevent squishing

--- a/src/styles/Check.module.scss
+++ b/src/styles/Check.module.scss
@@ -1,4 +1,6 @@
 .container {
+    min-height: 40px;
+    min-width: 40px;
     height: 40px;
     width: 40px;
 
