--- a/src/styles/NewTask.module.scss
+++ b/src/styles/NewTask.module.scss
@@ -14,6 +14,8 @@
         margin-left: .25rem;
         font-weight: bold;
         font-size: 1.5rem;
+        word-break: break-all;
+        white-space: pre-wrap;
     }
 }
 
